Refactor permutation algorithm to use backtracking